--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,12 @@
-name: Class Project
+name: Project pipeline
+
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # run on pushes to main branch
+
+
 
 jobs:
 
@@ -12,25 +14,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20
 
-    - name: install dependences
-      run: npm ci
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
 
-    - name: log into dockerhub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        with:
+          node-version: 20
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/class-project-node:latest
 
-    - name: push Docker image to dockerhub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/class-project-node:latest
+      - name: Install dependencies
+        run: npm ci
+
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-node-app:latest .
+
+
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-node-app:latest
